@@ -72,6 +72,15 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue causing global aggregations with ``JOINs`` on virtual tables
+   (sub-selects) which contain ``LIMIT`` to return incorrect results. E.g.::
+
+     SELECT COUNT(*) FROM
+       (SELECT * FROM t1 ORDER BY a LIMIT 5) t1,
+     JOIN
+       t2
+     ON t1.a = t2.b
+
  - Fixed an issue that caused an error when trying to create a table with a
    generated column expression of type array.
 
@@ -82,4 +91,5 @@ Fixes
  - Fixed an issue with ``INNER`` and ``CROSS JOINS`` on more than 2 tables that
    could result in a ``Iterator is not on a row`` error.
 
- - Fixed empty ``account_user``-column in twitter tutorial plugin of the Admin UI.
+ - Fixed empty ``account_user``-column in twitter tutorial plugin of the
+   Admin UI.
